force-app/main/default/objects/Program_Log__c/Program_Log__c.object-meta.xml
<CustomObject>
    <label>Program Log</label>
    <nameField>
        <displayFormat>{YYYY}-{000000}</displayFormat>
        <label>Program Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Program Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>