force-app/main/default/objects/Program_Log__c/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <label>Event</label>
    <type>TextArea</type>
</CustomField>