force-app/main/default/objects/Program_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Program__c</columns>
    <columns>Subject__c</columns>
    <columns>Contact__c</columns>
    <columns>Status__c</columns>
    <columns>Account__c</columns>
    <columns>Activity_Date__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Event__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>